resources/html/css/style.css
.scrollbar {
	float: left;
	height: 300px;
	width: 65px;
	background: #F5F5F5;
	overflow-y: scroll;
	margin-bottom: 25px;
}

#wrapper {
	text-align: center;
	margin: auto;
}

#alpha-scrollbar::-webkit-scrollbar {
	width: 20px;
	box-shadow: inset 0 0 1px rgba(64,228,240,1);
}

#alpha-scrollbar::-webkit-scrollbar-track {
	box-shadow: inset 0 0 1px rgba(64,228,240,1);
}

#alpha-scrollbar::-webkit-scrollbar-thumb {
	box-shadow: inset 0 0 1px rgba(64,228,240,1);
    background-color: rgba(10, 85, 134, 0.7);
}

#solid-scrollbar::-webkit-scrollbar {
	width: 20px;
	box-shadow: inset 0 0 1px rgba(64,228,240,1);
}

#solid-scrollbar::-webkit-scrollbar-track {
	box-shadow: inset 0 0 1px rgba(64,228,240,1);
	background-color: #294471;
}

#solid-scrollbar::-webkit-scrollbar-thumb {
	box-shadow: inset 0 0 1px rgba(64,228,240,1);

}

.game-background {
    background-image: url("../img/bg.jpg");
    background-repeat: no-repeat;
    background-size: 100% 100%;
    width: 100%;
    height: 100%;
    position: fixed;
    left: 0%;
    top: 0%;
    z-index: -2;
}

.game-background-grid {
    position: absolute;
    background-image: url("../img/gridbg-glow2.png");
    background-repeat:repeat;
    background-attachment: scroll;
    background-position: 2.7% 0;
    background-size: 5% auto;
    height: 100%;
    left: 0%;
    top: 0%;
    z-index: -1;
}

.game-header {
    background-image: url("../img/header_bg.png"), linear-gradient(to right, rgba(13,33,90,0) 0%,rgba(13,33,90,0.7) 16%,rgba(13,33,90,0.7) 19%,rgba(13,33,90,0.7) 20%,rgba(13,33,90,0.7) 50%,rgba(13,33,90,0.7) 81%,rgba(13,33,90,0.7) 84%,rgba(13,33,90,0) 100%);
    background-repeat: no-repeat;
    background-size: 100% 100%;
    height: 12vh;
    z-index: -1;
    overflow: auto;
}

.game-logo {
    width: 100%;
    height: 100%;
}

.game-menu {
    background-image: url("../img/menu.png");
    background-repeat: no-repeat;
    background-size: 100% 100%;
    padding-top: 2%;
    padding-bottom: 2%;
    width: 17.8646%;
    margin-left: 15.9375%;
    margin-right: 1.3541%;
    z-index: -1;
    overflow:auto;
    float:left;
    background-color:rgba(17, 33, 90, 0.7);
    height: 50vh;
}

.game-menu-content {
    position: relative;
    display: inline-block;
    overflow-x: hidden;
    overflow-y: auto;
    left: 14%;
    top: 8.9595%;
    width: 68.0%;
    max-height: 88.5%;
}

.game-main {
    position: relative;
    width: 48.9062%;
    z-index: -1;
    float: left;
    background-color:rgba(17, 33, 90, 0.7);
    border-left: 1px solid #0a5586;
    border-right: 1px solid #0a5586;
    height: 86vh;
}

.game-main-text {
    position: relative;
    padding-left: 3%;
    padding-right: 2%;
    word-wrap: break-word;
}

.game-header-res {
    background-image: url("../img/ore.png");
    background-repeat: no-repeat;
    background-size: cover;
}

.game-header-table {
    position:relative;
    text-align:center;
    overflow-y: auto;
    overflow-x: auto;
    margin: auto;
    border-collapse:separate; 
    width: 100%;
    height: 100%;
    color: white;
}

.game-header-content {
    position: relative;
    display: inline-block;
    overflow:hidden;
    left: 18.25%;
    top: 17.5%;
    width: 63.5%;
    height: 81.8965%;
}

.game-header-res-pane {
    position: relative;
    overflow-y: auto;
    float: left;
    left: 10.5%;
    top: 50%;
    width: 70%;
    transform: translateY(-50%);
    width: 70%;
    max-width: 70%;
    max-height: 100%;
    display:flex;
    flex-flow:row wrap;
    justify-content:space-around;
    color: white;
    text-align: center;
}

.game-header-res-box {
    position: relative;
    /*display: table;*/
    /*overflow: hidden;*/
    float: left;
    width:auto;
    max-height: 50%;
}

.game-header-logo-pane {
    float: left;
    position: relative;
    overflow:visible;
    max-width: 18%;
    top: 50%;
    transform: translateY(-50%);
}

.nice-text {
    color: #ffffff;
    font-family: 'Raleway',sans-serif;
    font-size: 100%;
    font-weight: 800;
    line-height: 16px;
    line-height: 150%;
    margin: 0 0 24px;
    text-align: left;
}

.vertical-menu {
    text-align: left;
    font-family: Raleway;
    width: 100%;
}

.vertical-menu a {
    color: white;
    display: block;
    text-decoration: none;
    transition: 0.3s ease;
    border-left: solid #00000000 4px;
    padding: 10px 0;
    padding-left: 10%;
    border-bottom: 1px solid #0a5586;
}

.vertical-menu a:hover {
    background-color: #42edf818;
    border-left: 4px solid #ffffff;
}

.vertical-menu a.active {
    color: white;
    background-color: #42edf822;
    border-left: 4px solid #40e4f0;
}

.game-main-title {
    position: relative;
    background-image: url(../img/title.png);
    background-repeat: no-repeat;
    background-size: contain;
    display: block;
    background-size: 100% 100%;
    width: 100%;
    /*height: 100%;*/
    margin-top: 0.8333%;
}

.game-main-title-text {
    position: relative;
    color: white;
    font-family: Lato;
    font-size: 200%;
    margin-right: 20.5%;
    margin-bottom: 4px;
    margin-left: 3%;
    padding-left: 1.7083%;
    border-left: 4px solid #40e4f0;
    text-overflow: ellipsis;
    word-wrap: break-word;
}

.game-entity {
    position: relative;
    padding: 3%;
    overflow: auto;
    border-top: 1px solid #0a5586;
    border-bottom: 1px solid #0a5586;
    color: white;
    overflow: hidden;
    font-family: Lato;
    z-index: -1;
}

.game-entity-disabled {
    background-color:rgba(0,0,0,0.3);
}

.game-entity-title {
    display: inline-block;
    width: 98.5%;
    border-left: 4px solid #40e4f0;
    font-family: Lato;
    font-size: 150%;
    padding-left: 1.5%;

}

.game-entity-desc {
    position: relative;
    display: flex;
    float: left;
    max-height: 100%;
    max-width: 100%;
    width: 100%;
    height: 100%;
    border: 1px solid #0a5586;
    font: 100% Lato;

}

.game-entity-desc-picture {
    position: relative;
    float: left;
    width: 20%;
    height: 20%;
}

.game-entity-desc-text {
    position: relative;
    display: inline-grid;
    width: 100%;
    
    text-overflow: ellipsis;
    word-wrap: break-word;
    overflow: hidden;
    float: left;
    color: lightgrey;
    margin-left: 1%;
}

.game-entity-desc-right {
    position: relative;
    float: right;
    text-align: center;
}

.game-entity-desc-right-upgrade {
    height: 100%;
    font-size: 100%;
    text-transform: uppercase;
    background: rgba(39, 174, 96,1.0);
}

.game-entity-desc-upgrade {
    display: block;
    text-overflow: ellipsis;
    word-wrap: break-word;
    overflow: hidden;
    float: left;
    color: lightgrey;
    margin-top: auto;
}

.game-entity-desc-res-cost {
    position: relative;
    float: left;
    display: block;
    border-collapse:separate; 
    flex-flow:row wrap;
    justify-content:space-around;
    text-align: center;
    margin-left: 3%;
}

.game-entity-desc-res-cost-img {
	margin-left: auto;
	margin-right: auto;
    height: 20px;
}

.upgrade-button {
  float: right;
  position: relative;
  box-sizing: content-box;
  cursor: pointer;
  border: 1px solid #0f9b0f;
  font: 100% "Questrial", Helvetica, sans-serif;
  color: rgb(255, 255, 255);
  text-overflow: clip;
  background: linear-gradient(180deg, rgb(90,190,87) 0, rgb(53,146,56) 100%), rgb(90, 190, 87);
  background-origin: padding-box;
  background-clip: border-box;
  background-size: auto auto;
  font-size: 200%;

}

.upgrade-button:disabled {
    border: 1px solid #969393;
    background: linear-gradient(180deg, rgb(186, 190, 185) 0, rgb(144, 146, 144) 100%), rgb(186, 190, 185);
}

.upgrade-button:disabled:hover {
    background: rgb(115, 117, 115);
    box-shadow: 0 2px 4px 0 rgba(0,0,0,0.11) ;
    transition: all 150ms cubic-bezier(0.42, 0, 0.58, 1);
}

.upgrade-button:disabled:active {
    border: 1px solid rgba(180,180,180,0.2);
    background: rgb(144, 146, 144);
    box-shadow: 0 3px 0 0 rgba(0,0,0,0.1) inset;
    transition: 0.3s ease;
}

.upgrade-button:hover {
  background: rgb(90, 190, 87);
  box-shadow: 0 2px 4px 0 rgba(0,0,0,0.11) ;
  transition: all 150ms cubic-bezier(0.42, 0, 0.58, 1);
}

.upgrade-button:active {
  border: 1px solid rgba(180,180,180,0.2);
  background: rgba(77,168,74,1);
  box-shadow: 0 3px 0 0 rgba(0,0,0,0.1) inset;
  transition: 0.3s ease;
}

.login-background {
    position: fixed;
    background-image: url("../img/login-bay2.jpg");
    background-repeat:no-repeat;
    background-size: cover;
    background-position: center;
    background-color: black;
    width: 100%;
    height: 100%;
    left: 0%;
    top: 0%;
    z-index: -2;
}

.login-container {
    position:relative;
    top: 60%;
    background-color: rgba(0, 148, 255, 0.2);
    width: 30%;
    margin-left:auto;
    margin-right: auto;
    border: 1px solid #0a5586;
    color: white;
    font-family: 'Raleway',sans-serif;
}

.login-container-field {
    position: relative;
    display: flow-root;
    margin-left:auto;
    margin-right: auto;
    padding: 5px;
}

.login-box-style {
    background-color: transparent;
    color: white;
    border: 1px solid #0a5586;
}

*::-webkit-input-placeholder {
    color: #2999a1;
}

input {
    max-width: 90%;
}

div.tab {
    overflow: hidden;
    background-color: rgba(0, 0, 0, 0.26);
}

div.tab button {
    background-color: transparent;
    border: none;
    outline: none;
    cursor: pointer;
    padding: 14px 16px;
    transition: 0.3s;
    color: white;
    border-bottom: 2px solid rgba(255, 255, 255, 0.26);
}

div.tab button:hover {
    border-bottom: 2px solid rgba(255,255,255,1);
    background-color: rgba(255, 255, 255, 0.02);
}

div.tab button.active {
    background-color: rgba(255, 255, 255, 0.05);
    border-bottom: 2px solid rgba(64,228,240,1);
}

.tabcontent {
    display: none;
    margin-top: 10px;
    color: white;
}

